--- a/public/home.html
+++ b/public/home.html
@@ -1,8 +1,8 @@
 <!--
-Quiz #2
+Assessment #2
 SQAE113 - DevOps Infrastructure Level 1
-Prof: Washington Valencia
-Feb 2024
+Bilge Kaan Serin
+October 2024
 -->
 <!DOCTYPE html>
 <html lang="en">
